<resources>
    <string name="app_name">Zoid</string>
    <string name="menu_settings">Settings</string>
    	<string name="settings_code">Get mobile code</string>
     	<string name="settings_register">Register</string>
     	<string name="settings_transfer">Transfer</string>

     	<string-array name="category">
        <item>News</item>
        <item>Work</item>
        <item>Video</item>
		<item>Reminder</item>
        </string-array>
     	
     <string name="menu_feed">Feed settings</string>
     <string name="menu_bookmark">Add bookmark</string>
     		
    <string name="title_activity_main">Zoid</string>
    <string name="title_activity_todo">To-do</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="title_activity_barcode">BarCode</string>

	<string name="buttonfeed">News Feed</string>
	<string name="buttonbookmark">Bookmarks</string>
	<string name="buttontt">Week Agenda</string>
	<string name="buttoncalc">Calculator</string>
	<string name="buttonset">Settings</string>
	
	<string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonplus">+</string>
    <string name="buttonminus">-</string>
    <string name="buttonmultiply">x</string>
    <string name="buttondivide">/</string>
    <string name="buttondot">.</string>
	<string name="buttonc">C</string>
	<string name="buttonequalto">=</string>
	<string name="buttoncall">Call</string>
	
	<string name="feed">News Feed</string>
	<string name="bookmark">Bookmarks</string>
	<string name="barcode">Scan another barcode</string>
	<string name="speak">Speak now</string>
	
</resources>