<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#000000">

      
    <Button
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_register"
        android:textColor="#cccccc"
        android:background="#000000"
        android:layout_margin="12dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <Button
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_code"
        android:layout_below="@+id/textView2"
        android:textColor="#cccccc"
        android:background="#000000"
        android:layout_margin="12dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <Button
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_transfer"
        android:layout_below="@+id/textView1"
        android:textColor="#cccccc"
        android:background="#000000"
        android:layout_margin="12dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   </RelativeLayout>
